fix: widget text size fixed on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -150,8 +150,8 @@ h1{
 #imgWidget button{
     background: #9758e4;
     border-radius: 1.3vh;
-    width: 50%;
-    height: 20%;
+    width: 80%;
+    height: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -186,12 +186,12 @@ h1{
 .widget h2{
     font-weight: lighter;
     font-family: "Bebas Neue", sans-serif;
-    font-size: 2vw;
+    font-size: 1.5vw;
     margin-left: 3%;
 }
 .widget p{
     width: 50%;
-    font-size:1vw;
+    font-size:0.8vw;
     margin-bottom: 0;
     margin-left: 3%;
 }
